# CMake_learing

./: LICENSE  README.md
Step1/Ex1/: CMakeLists.txt  Exercise1.c
Step1/Ex2/: CMakeLists.txt  Exercise2.cxx
Step1/Ex3/: CMakeLists.txt  Exercise3.cxx
